# fastapi-benchmark

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
benchmark/: main.py  utils.py
benchmark/api/: endpoints.py  schemas.py
benchmark/core/: config.py  constants.py
benchmark/core/logging/: dict_config.py
benchmark/core/models/: __init__.py  ranked_promo.py
benchmark/llms/: base.py  bedrock.py  exceptions.py  gpt.py
config/grafana/: datasources.yaml
config/grafana/dashboards/: observability.json
config/otel/: otel-collector-config.yaml
config/prometheus/: prometheus.yaml
